CH-38 - Prevent long titles from wrapping onto the next line in tag episode list

--- a/less/apps/tag.less
+++ b/less/apps/tag.less
@@ -17,6 +17,7 @@
     display: block;
     line-height: 30px;
     padding: 3px;
+    white-space: nowrap;
 
     &:hover { background-color: #e5e5e5; }
     &.active { background-color: #ddd; }
